--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Shortest URL</title>
+    <title>{{title}}</title>
     <meta name="author" content="Alexander Pape" />
     <meta
             name="description"
