Connect the frontend page to the API endpoint

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -28,7 +28,7 @@
             <div class="card-body">
                 <div class="mb-3">
                     <label for="originalUrl" class="form-label">Original URL</label>
-                    <input type="url" class="form-control" id="originalUrl" placeholder="https://www.your-url.com">
+                    <input type="url" class="form-control" id="originalUrl" value="" placeholder="https://www.your-url.com">
                 </div>
                 <button id="submitButton" class="btn btn-primary">Submit</button>
             </div>
